--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,9 @@ body {
 
 .section-container {
     background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .section-title {
@@ -155,7 +158,6 @@ button:hover {
 
 .banner{
     height: 325px; 
-    overflow: hidden;
     display: flex;
     align-items: center;
     width: 100%;
@@ -165,9 +167,9 @@ button:hover {
 
 .banner img {
     align-items: center;
+    display: flex;
     width: 100%;
     height: 100%;
-    max-width: 1300px;
     object-fit: cover; 
     transition: all 0.5s ease-in-out;
 }
