--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
     --black: #0f1010;
     --grey: #4a4847;
     --grey-second: #b0afa74a;
-    --grey-second2: #b0afa780; 
+    --grey-second2: #a75f20d0; 
     --lightblue: #567aac;
 }
 
@@ -39,9 +39,6 @@ body {
 
 .section-container {
     background-color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 .section-title {
@@ -158,6 +155,7 @@ button:hover {
 
 .banner{
     height: 325px; 
+    overflow: hidden;
     display: flex;
     align-items: center;
     width: 100%;
@@ -170,6 +168,7 @@ button:hover {
     display: flex;
     width: 100%;
     height: 100%;
+    max-width: 1300px;
     object-fit: cover; 
     transition: all 0.5s ease-in-out;
 }
@@ -393,7 +392,7 @@ button:hover {
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    gap: 70px;
+    gap: 50px;
     flex-wrap: wrap;
     /* grid-template-columns: 1fr 1fr; */
     /* justify-items: center;
@@ -423,7 +422,7 @@ button:hover {
 } */
 
 .about-container {
-    width: 800px;
+    width: 80%;
     height: 190px;
     display: flex;
     flex-direction: column;
@@ -432,7 +431,8 @@ button:hover {
     gap: 30px;
     background-color: var(--grey-second2);
     background-size: cover;
-    color: var(--black);
+    color: white;
+    flex-wrap: wrap;
     /* grid-column: 1/2; */
 }
 
@@ -440,9 +440,18 @@ button:hover {
     max-width: 800px;
 } */
 
+.text-container-about {
+    max-width: max(70%, 800px);
+}
+
+.text-container-about h2 {
+    text-align: center;
+}
+
 .text-container-about p {
     margin: 10px;
-    font-weight: 700;
+    font-weight: 400;
+    text-align: center;
 }
 
 .about-card-container {
@@ -502,6 +511,7 @@ button:hover {
     #about {
         display: flex;
         text-align: center;
+        background-image: none;
     }
     .about-img {
         display: none;
@@ -511,9 +521,29 @@ button:hover {
         justify-content: center;
         flex-direction: column;
         align-items: center;
+        flex-wrap: wrap;
+        background-color: white;
+        color: var(--black);
         /* grid-column: 1/3; */
-
         padding: 0;
+    }
+    .text-container-about {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        flex-wrap: wrap;
+    }
+}
+
+@media (max-width: 1060px) {
+    .about-container button {
+        display: none;
+    }
+    .responsive-btn {
+        display: block;
+        /* grid-column: 1/3; */
     }
 }
 
@@ -531,14 +561,6 @@ button:hover {
         flex-direction: column;
         gap: 70px;
     }
-    .about-container button {
-        display: none;
-    }
-    .responsive-btn {
-        display: block;
-        /* grid-column: 1/3; */
-    }
-
 }
 
 .footer {
