Agrego bars y login

--- a/styles.css
+++ b/styles.css
@@ -94,16 +94,45 @@ button:hover {
     transition: all 0.2s linear;
 }
 
-.header {
+.panel-header {
     margin: 0 auto;
-    padding: 0px 80px 0px 40px;
+    max-width: 1300px;
+    height: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 80px 0px 20px;
+    flex-direction: row;
+}
+
+.header-content {
+    margin: 0 auto;
     max-width: 1300px;
     height: 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-shadow: rgba(54, 55, 56, 0.359) 0px 8px 24px;
+    padding: 0px 120px 0px 50px;
+    /* background-color: var(--black); */
 }
+
+.panel-header, 
+.panel-list {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.panel-list {
+    gap: 10px;
+}
+
+header div ul li a {
+    color: var(--black);
+    font-size: 14px;
+}
+
+/* box-shadow: rgba(54, 55, 56, 0.359) 0px 8px 24px; */
 
 .logo-container img{
     height: 75px;
@@ -123,6 +152,17 @@ button:hover {
 
 .navbar i {
     color: var(--black);
+    font-size: 40px;
+    cursor: pointer;
+    display: none;
+}
+
+#signin-menu {
+    display: none;
+}
+
+#toggle-menu {
+    display: none;
 }
 
 .navbar a {
@@ -150,7 +190,39 @@ button:hover {
     font-weight: 700;
     border-radius: 3px;
     border: 3px solid var(--lightblue);
+}
 
+@media (max-width: 990px) {
+    .header-content {
+        padding: 0px 50px 0px 10px;
+    }
+    
+    .navbar i{
+        display: block;
+        /* position: absolute; */
+        z-index: 10;
+        right: 40px;
+        top: 30px;
+        padding: 0 20px;
+        }
+    .navbar-list{
+          display: none;
+        }
+    .panel-header{
+        display: none;
+    }
+    #toggle-menu:checked ~ .navbar-list {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: absolute;
+        top: 100px; 
+        height: 100%;
+        width: 100%; 
+        right: 0;
+        background-color: white;
+        gap: 60px;
+    }
 }
 
 .banner{
