--- a/styles.css
+++ b/styles.css
@@ -139,9 +139,15 @@ header div ul li a:hover {
 
 /* box-shadow: rgba(54, 55, 56, 0.359) 0px 8px 24px; */
 
-.logo-container img{
+.logo-container img {
     height: 75px;
     border-radius: 5px;
+    opacity: .8;
+}
+
+.logo-container img:hover {
+    opacity: 1;
+    cursor: pointer;
 }
 
 .navbar,
@@ -710,9 +716,15 @@ header div ul li a:hover {
     padding: 30px;
 }
 
-.footer-container img{
+.footer-container img {
     height: 75px;
     border-radius: 5px;
+    opacity: .8;
+}
+
+.footer-container img:hover {
+    opacity: 1;
+    cursor: pointer;
 }
 
 .footer-info {
