--- a/styles.css
+++ b/styles.css
@@ -11,21 +11,17 @@
 
 html {
     scroll-behavior: smooth;
-    scroll-padding-top: 100px;
+    scroll-padding-top: 80px;
 }
 
 body {
     background-color: white;
-    position: relative;
-    min-height: calc(100% - 600px);
 }
 
 :root {
-    /* --red: #D40000; */
     --black: #0f1010;
-    --grey: #4a4847;
-    --grey-second: #b0afa74a;
-    --grey-second2: #a75f20d0; 
+    --gray: #4a4847;
+    --gray-second: #b0afa74a;
     --lightblue: #567aac;
     --salmon: #fa8072;
 }
@@ -116,7 +112,6 @@ button:hover {
     justify-content: space-between;
     align-items: center;
     padding: 0px 120px 0px 50px;
-    /* background-color: var(--black); */
 }
 
 .panel-header, 
@@ -139,7 +134,11 @@ header div ul li a:hover {
     color: var(--lightblue);
 }
 
-/* box-shadow: rgba(54, 55, 56, 0.359) 0px 8px 24px; */
+.header-container {
+    position: sticky;
+    top: 0;
+    z-index: 9999;
+}
 
 .logo-container img {
     height: 75px;
@@ -188,23 +187,6 @@ header div ul li a:hover {
     color: var(--lightblue);
 }
 
-.navbar-list li:nth-child(2) > a {
-    border: 3px solid var(--grey);
-    font-size: 18px;
-    padding: 5px 15px;
-    border-radius: 5px;
-    /* transition: all 0.3s linear; */
-} 
-
-.navbar-list li:nth-child(2) > a:hover {
-    background-color: var(--black);
-    color: var(--lightblue);
-    transition: all 0.2s linear;
-    font-weight: 700;
-    border-radius: 3px;
-    border: 3px solid var(--lightblue);
-}
-
 @media (max-width: 990px) {
     .header-content {
         padding: 0px 40px 0px 10px;
@@ -212,30 +194,32 @@ header div ul li a:hover {
     
     .navbar i{
         display: block;
-        /* position: absolute; */
         z-index: 10;
         right: 20px;
         top: 30px;
         padding: 0 20px;
         }
     .navbar-list{
-          display: none;
-        }
+        display: none;
+    }
     .panel-header{
         display: none;
     }
     #toggle-menu:checked ~ .navbar-list {
         display: flex;
+        position: absolute;
+        background-color: white;
         flex-direction: column;
         align-items: center;
         position: absolute;
-        top: 110px; 
-        height: 100%;
+        top: 100px; 
+        height: calc(100vh - 100px);
         width: 100%; 
         right: 0;
-        background-color: white;
-        gap: 40px;
+        gap: 80px;
     }
+
+
 }
 
 @media (max-width: 550px) {
@@ -302,6 +286,10 @@ header div ul li a:hover {
     margin: 5px;
 }
 
+.btn-responsive {
+    display: none;
+}
+
 .hero-img-logo {
     background-image: url(./img/tabla-firewire.jpeg);
     background-position: center;
@@ -323,14 +311,14 @@ header div ul li a:hover {
     #hero {
         padding: 40px 0;
     }
-    .section-container {
-        padding: 15px 0px;
-    }
     .banner {
         display: none;
     }
     .hero-img-logo {
         display: none;
+    }
+    .btn-responsive {
+        display: block;
     }
     .description-container {
         justify-content: center;
@@ -396,7 +384,7 @@ header div ul li a:hover {
     justify-content: center;
     align-items: center;
     background-color: var(--grey);
-    color: var(--grey-second);
+    color: var(--gray-second);
     width: 200px;
     height: 200px;
     border-radius: 8px;
@@ -540,7 +528,7 @@ header div ul li a:hover {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background-color: var(--grey);
+    background-color: var(--gray);
     text-align: center;
     color: white;
     width: 250px;
@@ -559,7 +547,7 @@ header div ul li a:hover {
     display: flex;
     align-items: center;
     justify-content: center;
-    color: var(--grey-second);
+    color: var(--gray-second);
     width: 100px;
     height: 100px;
     border-radius: 50%;
@@ -667,8 +655,8 @@ header div ul li a:hover {
 #contact {
     flex-wrap: wrap;
     justify-content: space-around;
-    padding: 70px 30px 100px;
-    gap: max(150px, 20%);
+    padding: 70px 30px;
+    gap: 30px;
 }
 
 .contact-container {
@@ -704,15 +692,10 @@ header div ul li a:hover {
     transform: scale(1.05);
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1070px) {
     #contact {
-        padding: 70px 30px 200px;
-    }
-}
-
-@media (max-width: 540px) {
-    #contact {
-        padding: 70px 30px 230px;
+        padding: 50px auto;
+        text-align: center;
     }
 }
 
@@ -721,68 +704,71 @@ header div ul li a:hover {
 
 /*---------- FOOTER ----------*/
 
-.footer {
+.footer-container {
     display: flex;
-    background-color: var(--grey-second);
+    background-color: var(--gray-second);
     justify-content: space-around;
-    flex-direction: row-reverse;
     max-width: 1300px;
     margin: 0 auto;
     flex-wrap: wrap;
-    /* gap: 70px; */
     padding: 30px;
 }
 
-.footer-container img {
+.footer-img img {
     height: 75px;
     border-radius: 5px;
     opacity: .8;
 }
 
-.footer-container img:hover {
+.footer-img img:hover {
     opacity: 1;
     cursor: pointer;
 }
 
 .footer-info {
     display: flex;
-    flex-direction: column;
+    align-items: center;
     justify-content: space-around;
-    align-items: flex-start;
-    font-size: 15px;
+    flex-direction: column;
+    font-size: 17px;
     min-height: 100px;
 }
 
-.footer-social i:last-child {
+.footer-icons i {
+    cursor: pointer;
+}
+
+.footer-icons i:last-child {
     margin-left: 10px;
 }
 
-.footer-social a {
-    text-decoration: none;
-}
-
-.footer-terms {
+.footer-conds {
     display: flex;
     gap: 25px;
 }
 
-.footer-terms a {
+.footer-conds a {
     color: var(--black);
-    font-weight: 300;
+    font-weight: 600;
+    cursor: pointer;
 }
 
 @media (max-width: 995px) {
-    .footer {
+    .footer-container {
         gap: 20px;
         width: 100%;
         bottom: 0;
-        margin-top: 200px;
-        position: absolute;
     }
+}
 
+@media (max-width: 578px) {
     .footer-container {
-        max-width: 450px;
-        gap: 20px;
-        text-align: center;
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+    .footer-conds {
+        flex-direction: column;
+        align-items: center;
+        margin-top: 20px;
     }
 }
